Finish off the functions for mapping the spaces

--- a/workbook_1.ipynb
+++ b/workbook_1.ipynb
@@ -224,7 +224,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>batch_id</th>\n",
+       "      <th>event_id</th>\n",
+       "      <th>first_pulse_index</th>\n",
+       "      <th>last_pulse_index</th>\n",
+       "      <th>azimuth</th>\n",
+       "      <th>zenith</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>5.029555</td>\n",
+       "      <td>2.087498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   batch_id  event_id  first_pulse_index  last_pulse_index   azimuth    zenith\n",
+       "0         1        24                  0                60  5.029555  2.087498"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def coord(azimuth, zenith):\n",
+    "    x = math.cos(azimuth) * math.sin(zenith)\n",
+    "    y = math.sin(azimuth) * math.sin(zenith)\n",
+    "    z = math.cos(zenith)\n",
+    "    return dict(x=x, y=y, z=z, azimuth=azimuth, zenith=zenith)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cartesian_to_sphere(x, y, z):\n",
+    "    # https://en.wikipedia.org/wiki/Spherical_coordinate_system\n",
+    "    x2y2 = x**2 + y**2\n",
+    "    r = math.sqrt(x2y2 + z**2)\n",
+    "    azimuth = math.acos(x / math.sqrt(x2y2)) * np.sign(y)\n",
+    "    zenith = math.acos(z / r)\n",
+    "    return azimuth, zenith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sphere_to_cartesian(azimuth, zenith):\n",
+    "    # see: https://stackoverflow.com/a/10868220/4521646\n",
+    "    x = math.sin(zenith) * math.cos(azimuth)\n",
+    "    y = math.sin(zenith) * math.sin(azimuth)\n",
+    "    z = math.cos(zenith)\n",
+    "    return x, y, z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adjust_sphere(azimuth, zenith):\n",
+    "    if zenith < 0:\n",
+    "        zenith += math.pi\n",
+    "        azimuth += math.pi\n",
+    "    if azimuth < 0:\n",
+    "        azimuth += math.pi * 2\n",
+    "    azimuth = azimuth % (2 * math.pi)\n",
+    "    return azimuth, zenith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -233,42 +355,150 @@
        "(0.2711606932818947, -0.8260880094077094, -0.4940146547742188)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
+    "\n",
     "train_metadata=train_meta_df[(train_meta_df['event_id'] == EVENT) & (train_meta_df['batch_id'] == BATCH)]\n",
     "azimuth = train_metadata['azimuth']\n",
     "zenith = train_metadata['zenith']\n",
-    "x = math.cos(azimuth) * math.sin(zenith)\n",
-    "y = math.sin(azimuth) * math.sin(zenith)\n",
-    "z = math.cos(zenith)\n",
+    "x,y,z = sphere_to_cartesian(azimuth, zenith)\n",
+    "x,y,z\n",
+    "# x = math.cos(azimuth) * math.sin(zenith)\n",
+    "# y = math.sin(azimuth) * math.sin(zenith)\n",
+    "# z = math.cos(zenith)\n",
     "\n",
-    "x,y,z"
+    "# x,y,z, coord(azimuth, zenith), "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.2536306737895189, 2.0874975005610428)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cartesian_to_sphere(x,y,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0    5.029555\n",
+       " Name: azimuth, dtype: float64,\n",
+       " 0    2.087498\n",
+       " Name: zenith, dtype: float64)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_metadata['azimuth'], train_metadata['zenith']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.2536306737895189, 2.0874975005610428)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# azimuth = math.atan(y / x)\n",
+    "# zenith = math.acos(z / math.sqrt(x**2 + y**2 + z**2))\n",
+    "\n",
+    "# azimuth = math.atan2(x,y)\n",
+    "azimuth = math.atan2(y, x)\n",
+    "zenith = math.acos(z / math.sqrt(x**2 + y**2 + z**2))\n",
+    "# elevation = math.acos(y/z)\n",
+    "azimuth, zenith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_line(origin, vector):\n",
     "    below_origin = origin - direction_vector * extent\n",
     "    above_origin = origin + direction_vector * extent\n",
-    "    line = np.vstack((below_origin, above_origin))"
+    "    line = np.vstack((below_origin, above_origin))\n",
+    "    return line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-629.13235065, -117.62789978, -301.48982807],\n",
+       "       [ 629.13235065,  117.62789978,  301.48982807]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "truth_trace = get_line([0,0,0], [x,y,z])"
+    "truth_trace = get_line([0,0,0], [x,y,z])\n",
+    "truth_trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-629.13235065,  629.13235065]),\n",
+       " array([-117.62789978,  117.62789978]),\n",
+       " array([-301.48982807,  301.48982807]))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truth_trace[:,0], truth_trace[:,1], truth_trace[:,2]"
    ]
   },
   {
@@ -281,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -588,16 +818,16 @@
          "name": "Truth",
          "type": "scatter3d",
          "x": [
-          0,
-          0.2711606932818947
+          -629.1323506486368,
+          629.1323506486368
          ],
          "y": [
-          0,
-          -0.8260880094077094
+          -117.62789978192997,
+          117.62789978192997
          ],
          "z": [
-          0,
-          -0.4940146547742188
+          -301.4898280713909,
+          301.4898280713909
          ]
         }
        ],
@@ -1453,7 +1683,7 @@
     "            name=\"Predicted\"\n",
     "        ),\n",
     "        go.Scatter3d(\n",
-    "            x=[0, x], y=[0, y], z=[0,z],\n",
+    "            x=truth_trace[:,0], y=truth_trace[:,1], z=truth_trace[:,2],\n",
     "            marker=dict(\n",
     "                size=4,\n",
     "                color='green',\n",
@@ -1541,6 +1771,117 @@
    "source": [
     "from utils import angular_dist_score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>batch_id</th>\n",
+       "      <th>event_id</th>\n",
+       "      <th>first_pulse_index</th>\n",
+       "      <th>last_pulse_index</th>\n",
+       "      <th>azimuth</th>\n",
+       "      <th>zenith</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>5.029555</td>\n",
+       "      <td>2.087498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   batch_id  event_id  first_pulse_index  last_pulse_index   azimuth    zenith\n",
+       "0         1        24                  0                60  5.029555  2.087498"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2711606932818947, -0.8260880094077094, -0.4940146547742188)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x,y,z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.2536306737895189, 2.0874975005610428)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "azimuth = math.atan2(y, x)\n",
+    "zenith = math.acos(z)\n",
+    "azimuth, zenith"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
