Add tests for functions

--- a/workbook_1.ipynb
+++ b/workbook_1.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-02-06 16:46:39.300317: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-02-06 16:46:39.378578: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-02-06 16:46:39.378591: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-02-06 16:46:39.801217: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-02-06 16:46:39.801254: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-02-06 16:46:39.801260: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd \n",
     "from utils import seed_it_all"
@@ -26,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +143,7 @@
        "       [-132.8 , -501.45, -248.84]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +167,7 @@
        "array([[0.88924748, 0.16626122, 0.42614097]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +193,7 @@
        "       [ 641.04431786,   88.31150634,  327.89884446]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,87 +210,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>batch_id</th>\n",
-       "      <th>event_id</th>\n",
-       "      <th>first_pulse_index</th>\n",
-       "      <th>last_pulse_index</th>\n",
-       "      <th>azimuth</th>\n",
-       "      <th>zenith</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>5.029555</td>\n",
-       "      <td>2.087498</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   batch_id  event_id  first_pulse_index  last_pulse_index   azimuth    zenith\n",
-       "0         1        24                  0                60  5.029555  2.087498"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def coord(azimuth, zenith):\n",
-    "    x = math.cos(azimuth) * math.sin(zenith)\n",
-    "    y = math.sin(azimuth) * math.sin(zenith)\n",
-    "    z = math.cos(zenith)\n",
-    "    return dict(x=x, y=y, z=z, azimuth=azimuth, zenith=zenith)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def cartesian_to_sphere(x, y, z):\n",
     "    # https://en.wikipedia.org/wiki/Spherical_coordinate_system\n",
     "    x2y2 = x**2 + y**2\n",
@@ -316,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +266,7 @@
        "(0.2711606932818947, -0.8260880094077094, -0.4940146547742188)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,37 +277,33 @@
     "azimuth = train_metadata['azimuth']\n",
     "zenith = train_metadata['zenith']\n",
     "x,y,z = sphere_to_cartesian(azimuth, zenith)\n",
-    "x,y,z\n",
-    "# x = math.cos(azimuth) * math.sin(zenith)\n",
-    "# y = math.sin(azimuth) * math.sin(zenith)\n",
-    "# z = math.cos(zenith)\n",
-    "\n",
-    "# x,y,z, coord(azimuth, zenith), "
+    "x,y,z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-1.2536306737895189, 2.0874975005610428)"
+       "(5.029554633390068, 2.0874975005610428)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartesian_to_sphere(x,y,z)"
+    "azimuth_, zenith_ = adjust_sphere(*cartesian_to_sphere(x,y,z))\n",
+    "azimuth_, zenith_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +315,7 @@
        " Name: zenith, dtype: float64)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -428,25 +335,21 @@
        "(-1.2536306737895189, 2.0874975005610428)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# azimuth = math.atan(y / x)\n",
-    "# zenith = math.acos(z / math.sqrt(x**2 + y**2 + z**2))\n",
     "\n",
-    "# azimuth = math.atan2(x,y)\n",
     "azimuth = math.atan2(y, x)\n",
     "zenith = math.acos(z / math.sqrt(x**2 + y**2 + z**2))\n",
-    "# elevation = math.acos(y/z)\n",
     "azimuth, zenith"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +372,7 @@
        "       [ 629.13235065,  117.62789978,  301.48982807]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +395,7 @@
        " array([-301.48982807,  301.48982807]))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1705,67 +1608,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>batch_id</th>\n",
-       "      <th>event_id</th>\n",
-       "      <th>first_pulse_index</th>\n",
-       "      <th>last_pulse_index</th>\n",
-       "      <th>azimuth</th>\n",
-       "      <th>zenith</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60</td>\n",
-       "      <td>5.029555</td>\n",
-       "      <td>2.087498</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   batch_id  event_id  first_pulse_index  last_pulse_index   azimuth    zenith\n",
-       "0         1        24                  0                60  5.029555  2.087498"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1675,7 @@
        "0         1        24                  0                60  5.029555  2.087498"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1695,7 @@
        "(0.2711606932818947, -0.8260880094077094, -0.4940146547742188)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1715,7 @@
        "(-1.2536306737895189, 2.0874975005610428)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
