Add formatting for the input features of the XGboost model

--- a/nb_pca.ipynb
+++ b/nb_pca.ipynb
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1814,7 +1814,7 @@
        "0     2092  1.078269  0.982027"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,75 +1830,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>event_id</th>\n",
-       "      <th>azimuth</th>\n",
-       "      <th>zenith</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>9482</td>\n",
-       "      <td>1.015857</td>\n",
-       "      <td>0.787598</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7344</td>\n",
-       "      <td>0.948336</td>\n",
-       "      <td>0.899613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2092</td>\n",
-       "      <td>1.078269</td>\n",
-       "      <td>0.982027</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  event_id   azimuth    zenith\n",
-       "0     9482  1.015857  0.787598\n",
-       "0     7344  0.948336  0.899613\n",
-       "0     2092  1.078269  0.982027"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "submission.to_csv('submission.csv', index=True)\n",
-    "\n",
-    "!head submission.csv\n",
-    "\n"
+    "submission.set_index('event_id').to_csv('./artifacts/submission.csv')"
    ]
   },
   {
