Add time logging to the xgboost notebook

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -297,6 +297,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "batch_id             0\n",
+       "event_id             0\n",
+       "first_pulse_index    0\n",
+       "last_pulse_index     0\n",
+       "azimuth              0\n",
+       "zenith               0\n",
+       "charges              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_meta_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
